# Uni_SP_HW_3

./: CMakeLists.txt  SPArrayList.c  SPArrayList.h  SPArrayListUnitTest.c  SPFIARGame.c  SPFIARGame.h  SPFIARGameUnitTest.c  SPFIARParser.c  SPFIARParserUnitTest.c  SPMainAux.c  SPMainAux.h  SPMinimax.c  SPMinimax.h  SPMinimaxNode.c  SPMinimaxNode.h  main.c
